--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     },
     "include": [
         "./config/**/*.ts",
-        "./tests/**/*.ts"
+        "./tests/**/*.ts",
+       "./tests-umob/**/*.ts"
     ]
 }
