--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,5 +21,5 @@
         "./config/**/*.ts",
         "./tests/**/*.ts",
        "./tests-umob/**/*.ts"
-    ]
+, "tests-notInUse/bookLime.spec.ts"    ]
 }
