--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -16,7 +16,9 @@ jobs:
               run: |
                   ls ${{ github.workspace }}
             - run: echo "🍏 This job's status is ${{ job.status }}."
-            - name: List files in the repository
+            - name: Install Appium
               run: |
                   npm install -g appium
                   appium -v
+                  adb devices
+                  npm run android.app.test
