Added test action

--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -18,7 +18,7 @@ jobs:
             - run: echo "🍏 This job's status is ${{ job.status }}."
             - name: Install Appium
               run: |
-                  npm run install 
+                  npm install 
                   appium -v
 
             - name: run tests
