--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -16,10 +16,9 @@ jobs:
               run: |
                   ls ${{ github.workspace }}
             - run: echo "🍏 This job's status is ${{ job.status }}."
-            - name: Install Appium
+            - name: Install dependencies
               run: |
-                  npm install 
-                  appium -v
+                  npm install
 
             - name: run tests
               uses: reactivecircus/android-emulator-runner@v2
