--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -23,6 +23,7 @@ jobs:
             - name: run tests
               uses: reactivecircus/android-emulator-runner@v2
               with:
+                  api-level: 34
                   script: |
                       adb devices
                       npm run android.app.test
