--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -28,6 +28,7 @@ jobs:
                       # Verify files are present
                       ls -la
                       ls -la tests/specs/account/
+                      mkdir screenshots
 
                       # Download APK from URL
                       curl -L -o app.apk "http://smspm.com/uMobApp-release.apk"
@@ -40,3 +41,4 @@ jobs:
 
                       # Run tests
                       npm run android.app.github
+                      ls -la screenshots
