--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} is trying to run Appium test 🚀
 on: [push]
 jobs:
     Explore-GitHub-Actions:
-        runs-on: macos-13
+        runs-on: macos-latest
         steps:
             - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
             - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
@@ -41,5 +41,8 @@ jobs:
 
                       # Run tests
                       npm run android.app.github
-                      ls -la screenshots
-                      ls -la
+
+            - name: Last actions
+              run: |
+                  ls -la
+                  ls -la screenshots
