Fixing add Address test

--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} is trying to run Appium test 🚀
 on: [push]
 jobs:
     Explore-GitHub-Actions:
-        runs-on: ubuntu-latest
+        runs-on: ubuntu-22.04
         steps:
             - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
             - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
@@ -23,7 +23,7 @@ jobs:
             - name: run tests
               uses: reactivecircus/android-emulator-runner@v2
               with:
-                  api-level: 29
+                  api-level: 31
                   script: |
                       # Verify files are present
                       ls -la
