--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} is trying to run Appium test 🚀
 on: [push]
 jobs:
     Explore-GitHub-Actions:
-        runs-on: ubuntu-22.04
+        runs-on: ubuntu-latest
         steps:
             - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
             - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
@@ -20,10 +20,16 @@ jobs:
               run: |
                   npm install
 
+            - name: Enable KVM group perms
+              run: |
+                  echo 'KERNEL=="kvm", GROUP="kvm", MODE="0666", OPTIONS+="static_node=kvm"' | sudo tee /etc/udev/rules.d/99-kvm4all.rules
+                  sudo udevadm control --reload-rules
+                  sudo udevadm trigger --name-match=kvm
+
             - name: run tests
               uses: reactivecircus/android-emulator-runner@v2
               with:
-                  api-level: 31
+                  api-level: 29
                   script: |
                       # Verify files are present
                       ls -la
