--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -1,6 +1,9 @@
 name: GitHub Actions Demo
 run-name: ${{ github.actor }} is trying to run Appium test 🚀
-on: [push]
+on: |
+    push
+    schedule:
+      - cron: "0 * * * *"
 jobs:
     Explore-GitHub-Actions:
         runs-on: ubuntu-latest
