--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -2,6 +2,8 @@ name: GitHub Actions Demo
 run-name: ${{ github.actor }} is trying to run Appium test 🚀
 on:
     push:
+        branches:
+            - main
     schedule:
         - cron: "0 * * * *"
 jobs:
