Changed screen resolution

--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -30,7 +30,7 @@ jobs:
                   sudo udevadm trigger --name-match=kvm
 
             - name: Check available profiles
-              run: avdmanager list device
+              run: adb devices
 
             - name: run tests
               uses: reactivecircus/android-emulator-runner@v2
