--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -5,7 +5,7 @@ on:
         branches:
             - main
     schedule:
-        - cron: "0 4 * * *"
+        - cron: "0 23 * * *"
 jobs:push
     Explore-GitHub-Actions:
         runs-on: ubuntu-latest
@@ -33,6 +33,8 @@ jobs:push
               uses: reactivecircus/android-emulator-runner@v2
               with:
                   api-level: 29
+                  profile: pixel
+                  disable-animations: true
                   script: |
                       mkdir screenshots
 
