--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -32,7 +32,7 @@ jobs:
             - name: run tests
               uses: reactivecircus/android-emulator-runner@v2
               env:
-                AZURE_PWA: ${{ secrets.AZURE_PWA }}
+                AZURE_PWA: ${{ secrets.AZURE_PAT }}
               with:
                 api-level: 29
                 profile: pixel
