--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -37,7 +37,7 @@ jobs:
                 api-level: 29
                 profile: pixel
                 disable-animations: true
-                emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none
+                emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -camera-back none -feature Bluetooth
                 # Add these options for better touch support
                 arch: x86_64
                 target: google_apis  # Use Google APIs instead of default
