--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -37,11 +37,14 @@ jobs:
                 api-level: 34
                 profile: pixel
                 disable-animations: true
-                emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -packet-streamer-endpoint default
+                emulator-options: -no-snapshot-save -no-window -gpu swiftshader_indirect -noaudio -no-boot-anim -packet-streamer-endpoint default -skin 1080x1920 -no-skin
                 # Add these options for better touch support
                 arch: x86_64
                 target: google_apis  # Use Google APIs instead of default
                 script: |
+                  # Prevent fullscreen and immersive mode
+                  adb shell settings put global policy_control immersive.off=*
+
                   # Enable hardware features
                   adb shell settings put system pointer_location 0
                   adb shell settings put system show_touches 1
