--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -43,6 +43,7 @@ jobs:
                 target: google_apis  # Use Google APIs instead of default
                 script: |
                   # Prevent fullscreen and immersive mode
+                  adb shell settings put secure immersive_mode_confirmations confirmed
                   adb shell settings put global policy_control immersive.off=*
 
                   # Enable hardware features
