--- a/.github/workflows/umob-appium-action.yml
+++ b/.github/workflows/umob-appium-action.yml
@@ -42,9 +42,8 @@ jobs:
                 arch: x86_64
                 target: google_apis  # Use Google APIs instead of default
                 script: |
-                  # Prevent fullscreen and immersive mode
+                  # Prevent fullscreen
                   adb shell settings put secure immersive_mode_confirmations confirmed
-                  adb shell settings put global policy_control immersive.off=*
 
                   # Enable hardware features
                   adb shell settings put system pointer_location 0
