--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
         "ios.sauce.simulators.app.eu": "REGION=eu wdio ./config/saucelabs/wdio.ios.simulators.app.conf.ts",
         "ios.sauce.simulators.app.us": "wdio run ./config/saucelabs/wdio.ios.simulators.app.conf.ts",
         "ios.browser": "wdio run config/wdio.ios.browser.conf.ts",
-        "lint": "eslint config tests"
+        "lint": "eslint config tests",
+        "prettier-watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}"
     },
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^8.2.0",
@@ -61,6 +62,7 @@
         "appium-uiautomator2-driver": "^4.2.3",
         "appium-xcuitest-driver": "7.24.17",
         "eslint-plugin-wdio": "^9.0.5",
+        "prettier": "3.6.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.5.4"
     }
