02/10/2025 night run, update for credentials.json and package.json for accept tests run

--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
         "android.testingbot.app": "wdio ./config/testingbot/wdio.android.tb.app.conf.ts",
         "android.app": "wdio run config/wdio.android.app.conf.ts",
         "android.app.test": "wdio run config/wdio.android.app.test.conf.ts",
+        "android.app.test.accept": "cross-env TEST_ENV=accept TEST_USER=acceptUser1 wdio run config/wdio.android.app.test.conf.ts",
+        "android.app.test.prod": "cross-env TEST_ENV=prod TEST_USER=prodUser1 wdio run config/wdio.android.app.test.conf.ts",
         "android.app.github": "wdio run config/wdio.android.app.github.conf.ts",
         "android.app.cucumber": "wdio run config/wdio.android.app.cucumber.conf.ts",
         "android.browser": "wdio run config/wdio.android.browser.conf.ts",
@@ -61,6 +63,7 @@
         "appium": "^2.18.0",
         "appium-uiautomator2-driver": "^4.2.3",
         "appium-xcuitest-driver": "7.24.17",
+        "cross-env": "^7.0.3",
         "eslint-plugin-wdio": "^9.0.5",
         "prettier": "3.6.2",
         "ts-node": "^10.9.2",
