--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
         "appium": "^2.18.0",
         "appium-uiautomator2-driver": "^4.2.3",
         "appium-xcuitest-driver": "7.24.17",
+        "dotenv": "^17.2.3",
         "eslint-plugin-wdio": "^9.0.5",
         "prettier": "3.6.2",
         "ts-node": "^10.9.2",
