Changed user usage

--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
         "android.sauce.rdc.app.us": "wdio run config/saucelabs/wdio.android.rdc.app.conf.ts",
         "android.testingbot.app": "wdio ./config/testingbot/wdio.android.tb.app.conf.ts",
         "android.app": "wdio run config/wdio.android.app.conf.ts",
-        "android.app.test": "cross-env TEST_ENV=test TEST_USER=new12 wdio run config/wdio.android.app.test.conf.ts",
-        "android.app.accept": "cross-env TEST_ENV=accept TEST_USER=new12 wdio run config/wdio.android.app.accept.conf.ts",
+        "android.app.test": "cross-env TEST_ENV=test wdio run config/wdio.android.app.test.conf.ts",
+        "android.app.accept": "cross-env TEST_ENV=accept wdio run config/wdio.android.app.accept.conf.ts",
         "android.app.prod": "cross-env TEST_ENV=prod TEST_USER=prodUser1 wdio run config/wdio.android.app.test.conf.ts",
         "android.app.github": "wdio run config/wdio.android.app.github.conf.ts",
         "android.app.cucumber": "wdio run config/wdio.android.app.cucumber.conf.ts",
